--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.7.14"
+    "vue": "^2.7.14",
+    "vue-router": "3.0.2",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
